修复maven和gradle在同一个project中搜索失败的问题