@@ -2,7 +2,6 @@ package io.github.future0923.debug.tools.idea.search;
 
 import com.intellij.navigation.ChooseByNameContributor;
 import com.intellij.navigation.NavigationItem;
-import com.intellij.openapi.module.Module;
 import com.intellij.openapi.project.Project;
 import io.github.future0923.debug.tools.idea.search.beans.HttpUrlInfo;
 import io.github.future0923.debug.tools.idea.search.beans.HttpUrlItem;
@@ -12,8 +11,6 @@ import org.jetbrains.annotations.NotNull;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
 /**
  * 提供HttpUrl搜索的数据
@@ -22,26 +19,14 @@ import java.util.stream.Collectors;
  */
 public class HttpUrlContributor implements ChooseByNameContributor {
 
-    private final Module module;
-
     private List<HttpUrlItem> itemList;
-
-    public HttpUrlContributor(Module module) {
-        this.module = module;
-    }
 
     /**
      * 返回可供搜索的 元素名称列表
      */
     @Override
     public String @NotNull [] getNames(Project project, boolean includeNonProjectItems) {
-        List<HttpUrlInfo> requestInfos;
-        if (includeNonProjectItems && module != null) {
-            requestInfos = HttpUrlUtils.getModuleAllRequests(project, module);
-        } else {
-            Map<String, List<HttpUrlInfo>> allRequest = HttpUrlUtils.getAllRequest(project);
-            requestInfos = allRequest.values().stream().flatMap(Collection::stream).collect(Collectors.toList());
-        }
+        List<HttpUrlInfo> requestInfos = HttpUrlUtils.getAllRequest(project).values().stream().flatMap(Collection::stream).toList();
         List<String> names = new ArrayList<>(requestInfos.size());
         itemList = new ArrayList<>(requestInfos.size());
         for (HttpUrlInfo requestInfo : requestInfos) {
